--- a/app/platforms/android/assets/www/index.html
+++ b/app/platforms/android/assets/www/index.html
@@ -26,7 +26,7 @@
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
         <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons' rel="stylesheet" type="text/css">
         <link rel="icon" type="image/png" href="public/favicon-32x32.png" sizes="32x32">
-        <title>Expoville - Controle de Acesso</title>
+        <title>Task list - Laravel + VueJS2</title>
     </head>
     <body>
         <div id="app"></div>
